<resources>
    <string name="app_name">HabraClone Android</string>
    <string name="article_top_menu">Top</string>

    <array name="article_sort_spinner">
        <item>Top</item>
        <item>New</item>
    </array>

    <string name="title_activity_display_article">Publication</string>
    <string name="title_activity_display_comments">Comments</string>
    <string name="no_comments_textview">No comments yet</string>
    <string name="title_activity_display_user">Profile</string>
    <string name="user_karma">karma</string>
    <string name="user_rating">rating</string>
    <string name="user_position">position</string>
    <string name="user_fullname">fullname</string>
    <string name="user_email">email</string>
    <string name="user_registration_date">registration date</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_username">This username is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_authenticate_toast">Oops… Something went wrong.</string>

    <string name="button_add_comment">Add comment</string>
    <string name="title_add_comment">Comment</string>
    <string name="hint_comment_text">Comment text</string>

</resources>
