<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".activity.DisplayUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/user_info_layout"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/karma_layout"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@+id/user_image">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/user_karma"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_karma"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="25sp"
                android:text="14"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_image"
            android:background="@drawable/user"
            android:layout_centerInParent="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rating_layout"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/user_image">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/user_rating"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_rating"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25sp"
                android:text="18"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_username"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textColor="@android:color/black"
            android:text="username"
            android:layout_centerInParent="true"
            android:layout_below="@+id/user_image"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_position"
            android:textSize="20sp"
            android:text="@string/user_position"
            android:layout_centerInParent="true"
            android:layout_below="@+id/user_username"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/user_details_layout"
        android:layout_weight="1"
        android:paddingLeft="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:text="@string/user_fullname"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_fullname"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="fullname"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:text="@string/user_email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_email"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="email"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:text="@string/user_registration_date"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user_reg_date"
            android:textSize="22sp"
            android:textColor="@android:color/black"
            android:text="reg date"/>
    </LinearLayout>

</LinearLayout>
